--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -13,7 +13,7 @@
                 <wm-gridrow name="gridrow1" padding="2em unset unset unset">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-liveform novalidate="false" errormessage="" title="CivicXpress Vendor Application" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.VendorData.dataSet" captionalign="left" captionposition="top" name="liveformVendorApplication"
-                        class="panel-primary">
+                        class="panel-primary" on-error="liveformVendorApplicationError($event, $operation, $data)">
                             <wm-label padding="unset 0.5em" name="lblInstructions" caption="If you would like your company made available to be selected on new forms please complete the following application.  You may then submit this application to multiple municipalities to be included in their &quot;Approved Vendors&quot; lists."></wm-label>
                             <wm-layoutgrid columns="3" name="layoutgrid3">
                                 <wm-gridrow name="gridrow24">
@@ -69,12 +69,12 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow28">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn36">
-                                        <wm-form-field name="typeOfBusiness" displayname="Type of Business" show="true" primary-key="false" generator="assigned" key="typeOfBusiness" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                                        required="true" validationmessage="Type of Business is required"></wm-form-field>
+                                        <wm-form-field name="typeOfBusiness" displayname="Type of Business" show="true" primary-key="false" generator="assigned" key="typeOfBusiness" type="string" required="required" widget="text" maxchars="255" inputtype="text"
+                                        placeholder="Enter value" validationmessage="Type of Business is required"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn37">
-                                        <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" widget="text" maxchars="255" inputtype="text"
-                                        placeholder="Enter value" required="true" validationmessage="Business Classification is required"></wm-form-field>
+                                        <wm-form-field name="businessClassification" displayname="Business Classification" show="true" primary-key="false" generator="assigned" key="businessClassification" type="string" required="required" widget="select"
+                                        maxchars="255" inputtype="text" placeholder="Enter value" validationmessage="Business Classification is required" dataset="Individual,LLC,LLP,Corporation,Partnership,Professional Association, Other" defaultvalue="Individual"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn38">
                                         <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" widget="select" placeholder="Select value"
