New files added - [] Files modified - [Main.html,NewForm.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -23,7 +23,7 @@
         <wm-gridrow name="gridrow3">
             <wm-gridcolumn columnwidth="12" name="gridcolumn5">
                 <wm-composite name="composite4" margin="2em unset" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0">
-                    <wm-label class="col-md-3 control-label" name="label19" caption="Select FormType" width="40%"></wm-label>
+                    <wm-label class="col-md-3 control-label" name="label19" caption="Select Form" width="40%"></wm-label>
                     <wm-container class="col-md-9" name="container3" width="60%">
                         <wm-select name="selectForm" dataset="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet" datafield="All Fields" displayfield="FormType" datavalue="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.firstRecord"></wm-select>
                     </wm-container>
