--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -18,7 +18,7 @@
                 <wm-gridrow name="gridrow26_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn58_1" padding="2em 2em unset 0.5em">
                         <wm-tabs name="tabs1">
-                            <wm-tabpane name="tabpaneFORMINFO" title="FORM INFO">
+                            <wm-tabpane name="tabpaneFORMINFO" title="Form Info">
                                 <wm-liveform novalidate="false" errormessage="" title="bind:Variables.ReadFormType.dataSet.data[$i].formType" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateFormTypes.dataSet" captionalign="left" captionposition="top"
                                 name="liveformUpdateFormType" backgroundcolor="#dbdbdb" margin="unset 2em">
                                     <wm-layoutgrid columns="2" name="layoutgrid2">
@@ -130,7 +130,7 @@
                                     <wm-form-action key="save" display-name="Update" show="true" class="form-save btn-success" iconclass="wi wi-update" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                 </wm-liveform>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneSTATUS" title="STATUS">
+                            <wm-tabpane name="tabpaneSTATUS" title="Status">
                                 <wm-livegrid formlayout="dialog" name="livegrid1">
                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="Formstatuses List" dataset="bind:Variables.StatusesData.dataSet" navigation="Basic" name="grid1">
                                         <wm-grid-column binding="id" caption="Id" type="integer" primary-key="true" generator="identity" readonly="true" edit-widget-type="number" show="true"></wm-grid-column>
@@ -225,7 +225,7 @@
                                     </wm-liveform>
                                 </wm-livegrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCATEGORIES" title="CATEGORIES">
+                            <wm-tabpane name="tabpaneCATEGORIES" title="Categories">
                                 <wm-layoutgrid name="layoutgrid6">
                                     <wm-gridrow name="gridrow26">
                                         <wm-gridcolumn columnwidth="6" name="gridcolumn53" padding="unset unset unset 1em">
@@ -269,7 +269,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneCXADMIN" title="CX ADMIN">
+                            <wm-tabpane name="tabpaneCXADMIN" title="CX Admin">
                                 <wm-layoutgrid name="layoutgrid8">
                                     <wm-gridrow name="gridrow26_2">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn58_2" padding="2em unset 1em unset">
